--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "10.4.14",
+    "mysql": "^2.18.1",
     "next": "13.4.4",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "typeorm": "^0.3.16"
   }
 }
