--- a/sanity_folder/package.json
+++ b/sanity_folder/package.json
@@ -16,14 +16,15 @@
   ],
   "dependencies": {
     "@sanity/vision": "^3.12.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "autoprefixer": "10.4.14",
+    "next": "13.4.4",
+    "postcss": "8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "sanity": "^3.12.0",
     "styled-components": "^5.3.9",
-    "autoprefixer": "10.4.14",
-    "next": "13.4.4",
-    "postcss": "8.4.24",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
