--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "devStart": "nodemon test.ts"
   },
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "10.4.14",
     "mysql": "^2.18.1",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
+    "nodemon": "^2.0.22",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typeorm": "^0.3.16"
+  },
+  "devDependencies": {
+    "@types/node": "^20.3.0",
+    "prisma": "^4.15.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   }
 }
