--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typeorm": "^0.3.16"
+    "typeorm": "^0.3.16",
+    "use-image": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.0",
