--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "devStart": "nodemon test.ts"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@prisma/client": "^4.15.0",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "10.4.14",
@@ -20,6 +24,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
     "typeorm": "^0.3.16",
     "use-image": "^1.1.0"
