--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-spinners": "^0.13.8",
+    "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typeorm": "^0.3.16",
     "use-image": "^1.1.0"
