--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "docxtemplater": "^3.37.11",
     "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
+    "fs-extra": "^11.1.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
@@ -32,6 +34,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-spinners": "^0.13.8",
+    "sweetalert": "^2.1.2",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typeorm": "^0.3.16",
